--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 spring.datasource.url=jdbc:mysql://localhost:3306/helpqueue
 spring.datasource.username=root
-spring.datasource.password=Madness227
+spring.datasource.password=root
+
+server.port=8081
+
+database.tickets.elements.status={'active':'active','default':'active','inactive':'inactive','incomplete':'incomplete'}
